# SKYDAZE

./: .env.example  .gitignore  .gitmodules  AGENTS.md  BUSINESS_PLAN.md  EXECUTION_SPRINT_CHECKLIST.md  FTC_MASTER_CONTEXT.md  Makefile  README.md  SECURITY_QUICKSTART.md  build_gallery.py  full_generate.py  generate_collection.py  generate_fire_tests.py  package_catalog.py  pipeline.py  pipeline_orchestrate.py  pipeline_status.py  pyproject.toml  requirements.txt  retry_pack.py  run_test.py  scrape_targets.yaml  scraper.py  verify_collection.py  verify_fire_tests.py
agents/: CINEMATIC_AD_CAMPAIGN_PLAYBOOK.md  GENERATED_IMAGE_GALLERY.md  README.md  REGISTRY.yaml  RUTHLESS_AD_ASSET_LIBRARY.md  RUTHLESS_MULTI_LLM_ROUTING.yaml
artifacts/: gallery.html
docs/: CAVEMAN.md  COMFYUI.md
examples/: demo_generate.py  sample_concept.json
ftc/: __init__.py  bold_graphics_engine.py  catalog.py  caveman.py  cli.py  colors.py  concepts.py  config.py  design_engine.py  forbidden.py  graphic_designer.py  graphics_engine.py  kimi_design_pod.py  models.py  pipeline.py  print_assets.py  schema.py  scoring.py  scrapers.py  silhouettes.py  svg_mockups.py  synthesizer.py  trend_researcher.py  youtube.py
n8n/: README.md  ftc_pipeline_orchestrator.json
research/: CHRISTIAN_HIP_HOP_DESIGN_PLAYBOOK.md  STREETWEAR_PLAYBOOK.md
tests/: test_cli.py  test_config.py  test_models.py  test_pipeline.py
workers/: comfyui_worker.py  fal_image_worker.py  multi_provider_router.py  novita_image_worker.py  openrouter_image_worker.py  qwen_kimi_glm_design_worker.py  render_worker.py
(+103 files in other folders)
