[project]
name = "ftc"
version = "0.1.0"
description = "FTC FULL TIME CHRISTIAN — luxury Christian streetwear pipeline"
readme = "README.md"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
